# pokered

./: AGENTS.md  ANALYSIS.md  RUST_REWRITE_PLAN.md
pokered-rust/: .gitignore  Cargo.toml  README.md  sample_battle.json
pokered-rust/.cargo/: config.toml
pokered-rust/crates/pokered-app/: Cargo.toml
pokered-rust/crates/pokered-app/examples/: play_audio_test.rs
pokered-rust/crates/pokered-app/src/: audio.rs  battle_config.rs  battle_sfx.rs  cli.rs  direct_battle.rs  game.rs  lib.rs  main.rs  tools.rs
pokered-rust/crates/pokered-app/src/render/: battle.rs  intro.rs  menu.rs  mod.rs  oak.rs  overworld.rs  title.rs
pokered-rust/crates/pokered-audio/: Cargo.toml
pokered-rust/crates/pokered-audio/src/: apu.rs  audio_manager.rs  audio_manager_tests.rs  channel.rs  commands.rs  effects.rs  lib.rs  music_data.rs  music_data_tests.rs  sequencer.rs  sequencer_tests.rs  sfx_data.rs  sfx_data_tests.rs  tests.rs
pokered-rust/crates/pokered-core/: Cargo.toml
pokered-rust/crates/pokered-core/benches/: battle_bench.rs  data_bench.rs  overworld_bench.rs
pokered-rust/crates/pokered-core/src/: debug_log.rs  game_state.rs  intro_scene.rs  lib.rs  main_menu.rs  main_menu_tests.rs  naming_screen.rs  naming_screen_tests.rs  oak_speech.rs  options_menu.rs  options_menu_tests.rs  save_menu.rs  save_menu_tests.rs  start_menu.rs  start_menu_tests.rs  title_screen.rs  title_screen_tests.rs
pokered-rust/crates/pokered-core/src/battle/: accuracy.rs  capture.rs  damage.rs  menu.rs  menu_tests.rs  mod.rs  move_execution.rs  residual.rs  stat_stages.rs  state.rs  status_checks.rs  turn.rs  turn_order.rs  types.rs  wild.rs
pokered-rust/crates/pokered-core/src/items/: battle_items.rs  battle_items_tests.rs  healing.rs  healing_tests.rs  inventory.rs  inventory_tests.rs  mod.rs  pp_restore.rs  pp_restore_tests.rs  shop.rs  shop_tests.rs  status_cure.rs  status_cure_tests.rs  vitamins.rs  vitamins_tests.rs
pokered-rust/crates/pokered-core/src/link/: link_battle.rs  link_battle_tests.rs  link_trade.rs  link_trade_tests.rs  mod.rs  protocol.rs  transport.rs
pokered-rust/crates/pokered-core/src/overworld/: collision.rs  doors_elevators.rs  event_flags.rs  hm_effects.rs  map_data_loading.rs  map_loading.rs  map_scripts.rs  map_transitions.rs  mod.rs  npc_interaction.rs  npc_movement.rs  player_movement.rs  script_bridge.rs  script_engine.rs  special_terrain.rs  tests.rs  tests_collision.rs  tests_connections.rs  tests_doors_elevators.rs  tests_hm_effects.rs  tests_movement.rs  tests_npc.rs  tests_scripts.rs  tests_special_terrain.rs  tests_wild_encounters.rs  trainer_engine.rs  wild_encounters.rs
pokered-rust/crates/pokered-core/src/pokemon/: evolution.rs  evolution_tests.rs  mod.rs  move_learning.rs  move_learning_tests.rs  party.rs  party_tests.rs  pc_box.rs  pc_box_tests.rs  pc_menu.rs  pc_menu_tests.rs  pokedex.rs  pokedex_tests.rs  stats.rs  stats_tests.rs
pokered-rust/crates/pokered-core/src/save/: game_data.rs  hall_of_fame.rs  mod.rs  save_tests.rs  (+9 more)
pokered-rust/crates/pokered-core/tests/: edge_cases.rs  escape_flow.rs  event_script_integration.rs  game_flow_early_game.rs  game_flow_elite_four.rs  game_flow_gyms.rs  game_flow_helpers.rs  game_flow_opening.rs  game_flow_progression.rs  game_flow_starter.rs  helpers.rs  map_transition_integration.rs  npc_trainer_integration.rs  overworld_hm_terrain_integration.rs  status_across_turns.rs  trainer_balance_damage.rs  trainer_balance_data.rs  trainer_balance_elite_four.rs  trainer_balance_gym.rs  trainer_battle_flow.rs  wild_battle_flow.rs
pokered-rust/crates/pokered-data/: Cargo.toml
pokered-rust/crates/pokered-data/examples/: test_tile.rs
pokered-rust/crates/pokered-data/src/: blockset_data.rs  charmap.rs  collision.rs  elevator_data.rs  event_flags.rs  evos_moves.rs  fly_warp_data.rs  item_data.rs  items.rs  lib.rs  map_blocks.rs  map_connections.rs  map_data.rs  map_data_loader.rs  map_flags.rs  map_json.rs  map_names.rs  map_objects.rs  map_text_data.rs  maps.rs  move_data.rs  moves.rs  music.rs  npc_data.rs  npc_data_part1.rs  npc_data_part2.rs  npc_data_part3.rs  npc_data_part4.rs  npc_data_part5.rs  oam_constants.rs  pokemon_data.rs  sign_data.rs  sign_data_part1.rs  sign_data_part2.rs  sign_data_part3.rs  sign_data_part4.rs  sign_data_part5.rs  slot_machine.rs  species.rs  sprite_facing.rs  (+14 more)
pokered-rust/crates/pokered-data/tests/: test_evos_moves.rs  test_item_data.rs  test_map_metadata.rs  test_move_data.rs  test_pokemon_data.rs  test_slot_machine.rs  test_sprites.rs  test_text.rs  test_trainer_data.rs  test_type_chart.rs  test_wild_data.rs
pokered-rust/crates/pokered-renderer/: Cargo.toml  build.rs
pokered-rust/crates/pokered-renderer/src/: battle_anim.rs  battle_scene.rs  embedded.rs  embedded_font.rs  input.rs  layout.rs  lib.rs  menu.rs  palette.rs  resource.rs  sprite.rs  tests.rs  text_renderer.rs  textbox.rs  tile.rs  tilemap.rs  transition.rs  viewport.rs  window.rs  window_layer.rs
pokered-rust/crates/pokered-script/: Cargo.toml  DESIGN.md
pokered-rust/crates/pokered-script/src/: command.rs  config.rs  engine.rs  game_api.rs  lib.rs  loader.rs  tests.rs
pokered-rust/crates/pokered-web/: Cargo.toml  Makefile  README.md  build-web.sh  dev-server.sh
pokered-rust/crates/pokered-web/src/: lib.rs  main.rs
pokered-rust/crates/pokered-web/web/: index.html
pokered-rust/docs/: MAP_SCRIPT_PLAN.md
pokered-rust/run-wasm/src/: main.rs
pokered-rust/scripts/: generate_map_files.py  parse_event_flags.py  parse_npcs.py  parse_trainer_headers.py
pokered-rust/scripts/maps/: BluesHouse.js  BluesHouse.json  OaksLab.js  PalletTown.js  PalletTown.json  RedsHouse1F.js  RedsHouse1F.json  RedsHouse2F.js
pokered-rust/scripts/types/: game.d.ts
pokered-rust/tools/: asm2music.py  asm2sfx.py  compare.py  export_map_data.rs  map-editor.html  map-viewer.html  map_data.json
pokered-rust/tools/map-editor/: README.md  index.html  package-lock.json  package.json  vite.config.ts
pokered-rust/tools/map-editor/scripts/: fix-map-music.js  generate-map-scripts.js
pokered-rust/tools/map-editor/src/: App.vue  style.css
(+989 files in other folders)
