[workspace]
resolver = "2"
members = [
    "crates/pokered-core",
    "crates/pokered-data",
    "crates/pokered-renderer",
    "crates/pokered-audio",
    "crates/pokered-app",
    "crates/pokered-web",
    "run-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
bincode = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
rand = "0.8"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
num-derive = "0.4"
num-traits = "0.2"
