[package]
name = "pokered-app"
version.workspace = true
edition.workspace = true

[dependencies]
pokered-core = { path = "../pokered-core" }
pokered-renderer = { path = "../pokered-renderer" }
pokered-audio = { path = "../pokered-audio" }
anyhow = { workspace = true }
tracing = { workspace = true }
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
