[package]
name = "pokered-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "export_map_data"
path = "../../tools/export_map_data.rs"

[features]
embedded-scripts = ["pokered-core/embedded-scripts"]

[dependencies]
pokered-core = { path = "../pokered-core" }
pokered-data = { path = "../pokered-data" }
pokered-renderer = { path = "../pokered-renderer" }
pokered-audio = { path = "../pokered-audio" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"
