[package]
name = "pokered-core"
version.workspace = true
edition.workspace = true

[features]
embedded-scripts = ["pokered-script/embedded-scripts"]

[dependencies]
pokered-data = { path = "../pokered-data" }
pokered-script = { path = "../pokered-script" }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "battle_bench"
harness = false

[[bench]]
name = "overworld_bench"
harness = false

[[bench]]
name = "data_bench"
harness = false
