[package]
name = "pokered-data"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
ron = { workspace = true }
