[package]
name = "pokered-data"
version.workspace = true
edition.workspace = true

[features]
default = []
embedded-map-data = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
log = "0.4"

[dev-dependencies]
ron = { workspace = true }
