[package]
name = "pokered-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
pokered-data = { path = "../pokered-data" }
pokered-core = { path = "../pokered-core" }
pixels = "0.15"
winit = "0.30"
winit_input_helper = "0.17"
env_logger = "0.10"
log = "0.4"
error-iter = "0.4"
thiserror = { workspace = true }
