[package]
name = "pokered-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
pokered-data = { path = "../pokered-data" }
pokered-core = { path = "../pokered-core" }
pixels = "0.15"
winit = "0.30"
winit_input_helper = "0.17"
log = "0.4"
error-iter = "0.4"
thiserror = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
