[package]
name = "pokered-script"
version.workspace = true
edition.workspace = true

[dependencies]
pokered-data = { path = "../pokered-data" }
boa_engine = { version = "0.20", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = "0.4"

[dev-dependencies]
