[package]
name = "pokered-web"
version.workspace = true
edition.workspace = true

[features]
optimize = ["log/release_max_level_warn"]
embedded-scripts = ["pokered-core/embedded-scripts"]
default = ["optimize", "embedded-scripts"]

[dependencies]
pokered-core = { path = "../pokered-core" }
pokered-renderer = { path = "../pokered-renderer" }
pokered-audio = { path = "../pokered-audio" }
error-iter = "0.4"
log = "0.4"
pixels = "0.15"
winit = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3"
